--- a/WatchesShopWeb/index.html
+++ b/WatchesShopWeb/index.html
@@ -4,10 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Watches Shop - Classic Modern Watches Online</title>
-    <meta name="description"
-        content="Discover our collection of classic and modern watches, stylish and durable watches for everyone">
+    <meta name="description" content="Discover our collection of classic and modern watches, stylish and durable watches for everyone">
 
     <link rel="stylesheet" href="assets/style.css">
+
+    <!-- the structured data is extra information in code that tells search engines what your content is about, so repeat this block for all other products -->
+    <script type="application/ld+json">
+        {
+        "@context": "https://schema.org",
+        "@type": "Product",
+        "name": "Classic Watch",
+        "image": "assets/images/1.png",
+        "description": "Classic watch for daily wear",
+        "offers": {
+            "@type": "Offer",
+            "priceCurrency": "USD",
+            "price": "40.00",
+            "availability": "https://schema.org/InStock"
+        }
+        }
+    </script>
 </head>
 
 <body>
