--- a/WatchesShopWeb/index.html
+++ b/WatchesShopWeb/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Watches Shop - Classic Modern Watches Online</title>
-    <meta name="description" content="Discover our collection of classic and modern watches, stylish and durable watches for everyone">
-
+    <meta name="description" content="Explore our collection of classic and modern watches, stylish, durable, and elegant watches for men and women, available online now">
     <link rel="stylesheet" href="assets/style.css">
 
     <!-- the structured data is extra information in code that tells search engines what your content is about, so repeat this block for all other products -->
@@ -32,7 +31,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#">Shop</a></li>
+            <li><a href="index.html">Shop</a></li>
         </ul>
     </nav>
 
