--- a/WatchesShopWeb/index.html
+++ b/WatchesShopWeb/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Explore our collection of classic and modern watches, stylish, durable, and elegant watches for men and women, available online now">
     <link rel="stylesheet" href="assets/style.css">
 
-    <!-- the structured data is extra information in code that tells search engines what your content is about, so repeat this block for all other products -->
+    <!-- product schema helps search engines understand product details, so repeat this block for each product -->
     <script type="application/ld+json">
         {
         "@context": "https://schema.org",
@@ -23,6 +23,52 @@
         }
         }
     </script>
+
+    <!-- frequently asked questions schema helps search engines and AI answer engines understand question and answer content -->
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "FAQPage",
+            "mainEntity": [
+            {
+                "@type": "Question",
+                "name": "What is the best watch for daily use ?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "The best watch for daily use is a classic or modern watch because it offers durability, comfort, and elegant design"
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "What is the difference between classic and modern watches ?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Classic watches focus on timeless elegance, while modern watches emphasize minimalist and contemporary designs"
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "Are sport watches water resistant ?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Yes, sport watches are designed to be water resistant and suitable for active use"
+                }
+            }
+            ]
+        }
+    </script>
+
+    <!-- local business schema helps search engines understand the business identity and geographic area served -->
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "LocalBusiness",
+            "name": "Watches Shop",
+            "email": "watches-shop@gmail.com",
+            "areaServed": "Palestine",
+            "description": "Online watches shop offering classic, modern, luxury, and sport watches"
+        }
+    </script>
 </head>
 
 <body>
@@ -31,13 +77,13 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="index.html">Shop</a></li>
+            <li><a href="#faq">Questions</a></li>
         </ul>
     </nav>
 
     <header class="hero">
         <h1>Watches Collection</h1>
-        <p>Classic & Modern Watches For Everyone</p>
+        <p>Discover classic and modern watches designed for everyday use, style, and comfort</p>
     </header>
 
     <section class="products">
@@ -76,14 +122,34 @@
 
     <section class="about" id="about">
         <h2>About Our Shop</h2>
+        
         <p>
-            We offer high-quality watches that combine style, durability, and precision
+            We offer high-quality watches in Palestine with stylish designs and local delivery options
         </p>
         <p>
             Whether you prefer classic elegance or modern designs, our collection is crafted to suit every taste
         </p>
         <p>
-            For connection use the <a href="mailto:watches-shop@gmail.com">Email</a>
+            Contact us via <a href="mailto:watches-shop@gmail.com">Email</a>, serving customers across Palestine
+        </p>
+    </section>
+
+    <section class="faq" id="faq">
+        <h2>Frequently Asked Questions About Watches</h2>
+
+        <h3>What is the best watch for daily use ?</h3>
+        <p>
+            The best watch for daily use is a classic or modern watch because it combines durability, comfort, and elegant design suitable for everyday wear
+        </p>
+
+        <h3>What is the difference between classic and modern watches ?</h3>
+        <p>
+            Classic watches focus on timeless elegance and simple design, while modern watches feature minimalist styles and contemporary materials
+        </p>
+
+        <h3>Are sport watches water resistant ?</h3>
+        <p>
+            Yes, sport watches are designed to be water resistant, making them ideal for outdoor activities and active lifestyles
         </p>
     </section>
 
